<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.15">
  <DUT Name="ST_TopElement1_HMI" Id="{d2c5f06a-9624-02db-33c4-619ebb383e14}">
    <Declaration><![CDATA[TYPE ST_TopElement1_HMI :
STRUCT
	bZmienneTypoweDlaTopElement1	: BOOL;
	
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>