<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.15">
  <DUT Name="ST_TopElement1_HMI_Link" Id="{afb6776f-e6d0-4d3c-85b9-064d0107abb6}">
    <Declaration><![CDATA[TYPE ST_TopElement1_HMI_Link EXTENDS ST_BaseTopElement_HMI_Link :
STRUCT
	stTopElement		: ST_TopElement1_HMI;
	
	stGE1				: ST_GroupE_TE1_HMI_Link;
	
	stCE1				: ST_ControlE_TE1_HMI_Link;
	stCE2				: ST_ControlE_TE1_HMI_Link;
	
	stC1				: ST_Component_TE1_HMI_Link;
	stC2				: ST_Component_TE1_HMI_Link;
	stC3				: ST_Component_TE1_HMI_Link;
	
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>